2006-03-13  Fernando Perez  <Fernando.Perez@colorado.edu>

	* Manual: thanks to a tip on proper color handling for Emacs, by
	Eric J Haywiser <ejh1-AT-MIT.EDU>.
	
	* ipython.el: close http://www.scipy.net/roundup/ipython/issue57
	by applying the provided patch.  Thanks to Liu Jin
	<m.liu.jin-AT-gmail.com> for the contribution.  No problems under
	XEmacs/Linux, I'm trusting the submitter that it actually helps
	under win32/GNU Emacs.  Will revisit if any problems are reported.

2006-03-12  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/Gnuplot2.py (_FileClass): update for current Gnuplot.py
	from SVN, thanks to a patch by Ryan Woodard <rywo@bas.ac.uk>.

2006-03-12  Ville Vainio  <vivainio@gmail.com>

	* Magic.py (magic_timeit): Added %timeit magic, contributed by
	Torsten Marek.

2006-03-12  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/Magic.py (magic_macro): fix so that the n1-n2 syntax for
	line ranges works again.

2006-03-11  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/iplib.py (showtraceback): add back sys.last_traceback
	and friends, after a discussion with Zach Pincus on ipython-user.
	I'm not 100% sure, but after thinking aobut it quite a bit, it may
	be OK.  Testing with the multithreaded shells didn't reveal any
	problems, but let's keep an eye out.

	In the process, I fixed a few things which were calling
	self.InteractiveTB() directly (like safe_execfile), which is a
	mistake: ALL exception reporting should be done by calling
	self.showtraceback(), which handles state and tab-completion and
	more.

2006-03-01  Ville Vainio  <vivainio@gmail.com>  

	* Extensions/ipipe.py: Added Walter Doerwald's "ipipe" module.
	To use, do "from ipipe import *". 

2006-02-24  Ville Vainio  <vivainio@gmail.com>  

	* Magic.py, upgrade_dir.py: %upgrade magic added. Does things more
	"cleanly" and safely than the older upgrade mechanism.

2006-02-21  Ville Vainio  <vivainio@gmail.com>  

	* Magic.py: %save works again.
