@@ -1,3 +1,10 @@
+2006-03-16  Ville Vainio  <vivainio@gmail.com>
+
+	* upgrade_dir.py: Take path.py from Extensions, correcting
+	%upgrade magic
+	
+	* Suggest using %upgrade if ipy_user_conf.py isn't found.
+
 2006-03-13  Fernando Perez  <Fernando.Perez@colorado.edu>
 
 	* Manual: thanks to a tip on proper color handling for Emacs, by
